Integration with event feature